Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -1,26 +1,38 @@
-<div>
-	<p>backbone + require + art-template Demo</p>
+<!-- <nav role="navigation">
 	<ul>
-		<li>
-			<a href="#/">index</a>
-		</li>
-		<li>
-			<a href="#/entry">entry</a>
-		</li>
-		<li>
-			<a href="#/text">template</a>
-		</li>
-		<li>
-			<a href="#/requireCss">requireCss</a>
-		</li>
-		<li>
-			<a href="#/event">event</a>
-		</li>
-		<li>
-			<a href="#/params/1/2">params</a>
-		</li>
+		<li><a href="#/">index</a></li>
+		<li><a href="#/entry">entry</a></li>
+		<li><a href="#/text">template</a></li>
+		<li><a href="#/requireCss">requireCss</a></li>
+		<li><a href="#/event">event</a></li>
+		<li><a href="#/params/1/2">params</a></li>
+		<li><a href="#/register">register</a></li>
 	</ul>
-</div>
+</nav> -->
+
+
+	<header id="fh5co-header" role="banner">
+		<div class="container">
+			<div class="header-inner">				
+					<h1><i class="sl-icon-energy"></i>
+						<a href="#/">EasyLoan</a>
+					</h1>
+				<nav role="navigation">
+					<ul>
+						<li><a href="#/">index</a></li>
+						<li><a href="#/entry">entry</a></li>
+						<li><a href="#/text">template</a></li>
+						<li><a href="#/requireCss">requireCss</a></li>
+						<li><a href="#/event">event</a></li>
+						<li><a href="#/params/1/2">params</a></li>
+						<li><a href="#/register">register</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
+
+
 <div id="content">
 	
 </div>
