--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>TestLoan</title>
+
+	<!-- 	登录页面	 -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- 	菜单部分 -->
+	<title>EasyLoan</title>
+	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+
 </head>
+
+
+
 <body>
 	<!-- Application container. -->
 	<div role="main" id="main"></div>
 	<script data-main="app/main" src="app/lib/require.js"></script>
+
+	
 </body>
 </html>
