Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -1,16 +1,3 @@
-<!-- <nav role="navigation">
-	<ul>
-		<li><a href="#/">index</a></li>
-		<li><a href="#/entry">entry</a></li>
-		<li><a href="#/text">template</a></li>
-		<li><a href="#/requireCss">requireCss</a></li>
-		<li><a href="#/event">event</a></li>
-		<li><a href="#/params/1/2">params</a></li>
-		<li><a href="#/register">register</a></li>
-	</ul>
-</nav> -->
-
-
 	<header id="fh5co-header" role="banner">
 		<div class="container">
 			<div class="header-inner">				
@@ -25,7 +12,11 @@
 						<li><a href="#/requireCss">requireCss</a></li>
 						<li><a href="#/event">event</a></li>
 						<li><a href="#/params/1/2">params</a></li>
-						<li><a href="#/register">register</a></li>
+						
+
+
+						<li><a href="#/myself">个人中心</a></li>
+						<li><a href="#/register">注册</a></li>
 					</ul>
 				</nav>
 			</div>
