Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/myself.html
+++ b/app/tpl/myself.html
@@ -1,11 +1,15 @@
+
 <div>
-		<hr>
-	这是个人中心页面
-	<br>ID：{{data.id}}
-    <br>性别：{{data.gender}}
-    <br>真实姓名：{{data.real_name}}
-    <br>头像：{{data.header_img}}
-	<br>地址：{{data.addr}}
-	<br>邮箱：{{data.e_mail}}
-	<br>电话：{{data.phone}}
+	<h3>这是个人中心页面</h3>
+		<ul>
+			<li class="text-info">ID：{{data.id}}</li>
+			<li class="text-primary">性别：{{data.gender}}</li>
+			<li class="text-info">真实姓名：{{data.real_name}}</li>
+			<li class="text-primary">头像：{{data.header_img}}</li>
+			<li class="text-info">地址：{{data.addr}}</li>
+			<li class="text-primary">邮箱：{{data.e_mail}}</li>
+			<li class="text-info">电话：{{data.phone}}</li>
+		</ul>
 </div>
+
+
