--- a/app/tpl/register.html
+++ b/app/tpl/register.html
@@ -37,11 +37,13 @@
                 <h2 class="form-signin-heading">Register now</h2>
                 <div class="login-wrap">
                     <input type="text" class="form-control" id="username" placeholder="手机号" autofocus="">
-					<button class="btn btn-warning" id="send" style="margin-bottom: 15px;float:right;">获取短信验证码</button><br>
 
+                    <input type="text" class="form-control" id="phonecode" placeholder="短信验证码" style="width: 150px;float: left">
+                    <button class="btn btn-warning" id="send" type="button" style="margin-top:3px;float:right;">获取短信验证码</button>
+					
                     <input type="password" class="form-control" id="pass" placeholder="密码">
                     <input type="password" class="form-control" id="conpass" placeholder="确认密码">
-                    <input type="text" class="form-control" id="phonecode" placeholder="短信验证码" >
+
 <!--                     <label class="checkbox">
                         <input type="checkbox" value="agree this condition"> 已阅读注册条文
                     </label> -->
