Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -99,13 +99,42 @@
                     </li>
                 </ul>
             </li>
-            <li>
-                <a href="#/">登录</a>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover=
+                "dropdown" data-toggle="dropdown" href="#">登录<i class="fa fa-angle-down"></i>
+                </a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a href="#/login">用户登录</a>
+                    </li>
+                    <li>
+                        <a href="blog-two-col.html">合作企业登录</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover=
+                "dropdown" data-toggle="dropdown" href="#">注册<i class="fa fa-angle-down"></i>
+                </a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a href="#/register">用户注册</a>
+                    </li>
+                    <li>
+                        <a href="blog-two-col.html">合作企业注册</a>
+                    </li>
+                </ul>
+            </li>
+
+
+           
+<!--             <li>
+                <a href="#/login">登录</a>
             </li>
             <li>
                 <a href="#/register">注册</a>
             </li>
-
+ -->
             <li>
                 <a href="contact.html">Contact</a>
             </li>
