--- a/app/tpl/userPages/register.html
+++ b/app/tpl/userPages/register.html
@@ -34,7 +34,7 @@
         <div class="container">
 
             <form class="form-signin wow fadeInUp" action="">
-                <h2 class="form-signin-heading">Register now</h2>
+                <h2 class="form-signin-heading">个人用户注册</h2>
                 <div class="login-wrap">
                     <input type="text" class="form-control" id="username" placeholder="手机号" autofocus="">
 
@@ -47,11 +47,11 @@
 <!--                     <label class="checkbox">
                         <input type="checkbox" value="agree this condition"> 已阅读注册条文
                     </label> -->
-                    <button class="btn btn-lg btn-login btn-block" type="button" id="login-button">Submit</button>
+                    <button class="btn btn-lg btn-login btn-block" type="button" id="submit">注册</button>
 
                     <div class="registration">
                         Already Registered ?
-                        <a class="" href="login.html">
+                        <a class="" href="#/login">
                             Login
                         </a>
                     </div>
