--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -65,8 +65,20 @@
                     <li>
                         <a href="404.html">企业贷款</a>
                     </li>
-                    <li>
-                        <a href="career.html">贷款须知</a>
+<!--                     <li>
+                        <a href="#/regulation">贷款须知</a>
+                    </li> -->
+
+                     <li class="dropdown-submenu">
+                        <a href="#" tabindex="-1">贷款须知</a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#/regulation" tabindex="-1">个人贷款须知</a>
+                            </li>
+                            <li>
+                                <a href="#/comRegulation">企业贷款须知</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </li>
@@ -92,7 +104,7 @@
                         <a href="#/myself">个人信息</a>
                     </li>
                     <li>
-                        <a href="blog-two-col.html">借贷记录</a>
+                        <a href="#/record">借贷记录</a>
                     </li>
                     <li>
                         <a href="blog-detail.html">用户安全</a>
