--- a/app/tpl/userPages/login.html
+++ b/app/tpl/userPages/login.html
@@ -25,8 +25,10 @@
             <h2 class="form-signin-heading">个人用户登录</h2>
             
             <div class="login-wrap">
-                <input type="text" class="form-control" placeholder="手机号码" id="username" autofocus>
-                <input type="password" class="form-control" placeholder="密码" id="password">
+                <input type="text" class="form-control" placeholder="手机号码" id="username" name="username" autofocus>
+                <input type="password" class="form-control" placeholder="密码" id="password" name="password">
+                <input type="text" class="form-control" placeholder="验证码" id="code" name="verification_code">
+
                 <label class="checkbox">
                     <input type="checkbox" value="remember-me"> Remember me
                     <span class="pull-right">
