Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -107,7 +107,7 @@
                         <a href="#/record">借贷记录</a>
                     </li>
                     <li>
-                        <a href="blog-detail.html">用户安全</a>
+                        <a href="#/safetyInfo">用户安全</a>
                     </li>
                 </ul>
             </li>
@@ -152,7 +152,7 @@
 	<div style="background-color: pink">
      <img src="app/demoStyle/img/blog/img8.jpg" alt="突突突突">   
     </div>
-
+    
 
 </div>
 
