Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -1,4 +1,5 @@
    <!--header start-->
+
 <header class="head-section">
     <div class="navbar navbar-default navbar-static-top container">
 
@@ -12,7 +13,7 @@
         <ul class="nav navbar-nav">
             
             <li>
-                <a href="#/">主页</a>
+                <a href="index.html">主页</a>
             </li>
 
             <li class="dropdown">
@@ -149,9 +150,59 @@
 
 
 <div id="content">
-	<div style="background-color: pink">
+<!-- 	<div style="background-color: pink">
      <img src="app/demoStyle/img/blog/img8.jpg" alt="突突突突">   
+    </div> -->
+
+        <!-- Sequence Modern Slider -->
+    <div id="sequence-theme" class="sequence-inner">
+      <div id="sequence">
+        <img class="sequence-prev" src="app/demoStyle/img/seq-slider/bt-prev.png" alt="Previous" style="display: inline;">
+        <img class="sequence-next" src="app/demoStyle/img/seq-slider/bt-next.png" alt="Next" style="display: inline;">
+
+        <ul class="sequence-canvas">
+          <li class="animate-out" style="display: list-item; z-index: 1;">
+            <div class="info" style="">
+              <h2>
+                Built using Sequence.js
+              </h2>
+              <p>
+                The Responsive Slider with Advanced CSS3 Transitions
+              </p>
+            </div>
+            <img class="sky" src="app/demoStyle/img/seq-slider/bg-clouds.png" alt="Blue Sky" style="">
+            <img class="balloon" src="app/demoStyle/img/seq-slider/balloon.png" alt="Balloon" style="">
+          </li>
+          <li class="animate-in" style="display: list-item; z-index: 3;">
+            <div class="info" style="">
+              <h2>
+                Creative Control
+              </h2>
+              <p>
+                Create Acme sliders using CSS3 transitions -- no jQuery knowledge required!
+              </p>
+            </div>
+            <img class="sky" src="app/demoStyle/img/seq-slider/bg-clouds.png" alt="Blue Sky" style="">
+            <img class="aeroplane" src="app/demoStyle/img/seq-slider/aeroplane.png" alt="Aeroplane" style="">
+          </li>
+          <li class="animate-out" style="display: list-item; z-index: 1;">
+            <div class="info" style="">
+              <h2>
+                Cutting Edge
+              </h2>
+              <p>
+                Supports modern browsers, old browsers (IE7+), touch devices and responsive designs
+              </p>
+            </div>
+            <img class="sky" src="app/demoStyle/img/seq-slider/bg-clouds.png" alt="Blue Sky" style="">
+            <img class="kite" src="app/demoStyle/img/seq-slider/kite.png" alt="Kite" style="">
+          </li>
+        </ul>
+      </div>
     </div>
+    <!--/sequence-theme-->
+    <!-- End of Sequence Modern Slider -->
+
     
 
 </div>
