--- a/index.html
+++ b/index.html
@@ -25,5 +25,88 @@
     <script defer src="app/demoStyle/js/jquery.flexslider.js"></script>
     <script src="app/demoStyle/js/superfish.js"></script>
 
+
+
+
+
+
+    <script type="text/javascript" src="app/demoStyle/assets/bxslider/jquery.bxslider.js"></script>
+
+    <script type="text/javascript" src="app/demoStyle/js/jquery.parallax-1.1.3.js"></script>
+    <script src="app/demoStyle/js/wow.min.js"></script>
+    <script src="app/demoStyle/assets/owlcarousel/owl.carousel.js"></script>
+
+    <script src="app/demoStyle/js/jquery.easing.min.js"></script>
+
+    <!--common script for all pages-->
+    <script src="app/demoStyle/js/common-scripts.js">
+    </script>
+
+    <!-- Sequence Moder -slider js -->
+    <script src="app/demoStyle/js/seq-slider/jquery.sequence-min.js">
+    </script>
+
+
+
+    <script src="app/demoStyle/js/seq-slider/sequencejs-options.sliding-horizontal-parallax.js">
+    </script>
+
+
+
+    <!-- end of sequence slider js-->
+
+  <!--   <script type="text/javascript">
+      jQuery(document).ready(function() {
+
+
+        $('.bxslider1').bxSlider({
+          minSlides: 5,
+          maxSlides: 6,
+          slideWidth: 360,
+          slideMargin: 2,
+          moveSlides: 1,
+          responsive: true,
+          nextSelector: '#slider-next',
+          prevSelector: '#slider-prev',
+          nextText: 'Onward →',
+          prevText: '← Go back'
+        });
+
+      });
+
+
+    </script>
+    <script>
+      $('a.info').tooltip();
+      $(window).load(function() {
+        $('.flexslider').flexslider({
+          animation: "slide",
+          start: function(slider) {
+            $('body').removeClass('loading');
+          }
+        });
+      });
+
+
+
+      $(document).ready(function() {
+
+        $("#owl-demo").owlCarousel({
+
+          items : 4
+
+        });
+
+      });
+
+      jQuery(document).ready(function(){
+        jQuery('ul.superfish').superfish();
+      });
+
+      new WOW().init();
+
+
+    </script>
+ -->
 </body>
 </html>
