--- a/app/tpl/userPages/login.html
+++ b/app/tpl/userPages/login.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="col-lg-8 col-sm-8">
                     <ol class="breadcrumb pull-right">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li class="active">Login</li>
                     </ol>
                 </div>
