--- a/app/tpl/userPages/register.html
+++ b/app/tpl/userPages/register.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="col-lg-8 col-sm-8">
                     <ol class="breadcrumb pull-right">
-                        <li><a href="#/">主页</a></li>
+                        <li><a href="index.html">主页</a></li>
                         <li class="active">Registration</li>
                     </ol>
                 </div>
