Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -5,7 +5,7 @@
 
       <!-- menu左边 -->
 		<div class="navbar-header">
-		  <a class="navbar-brand" href="index.html">Easy<span>Loan</span></a>
+		  <a class="navbar-brand" href="#/" style="font-weight: bold;">Easy<span>Loan</span></a>
 		</div>
 
           <!-- menu右边 -->
@@ -13,7 +13,7 @@
         <ul class="nav navbar-nav">
             
             <li>
-                <a href="index.html">主页</a>
+                <a href="#/">主页</a>
             </li>
 
             <li class="dropdown">
