--- a/app/tpl/userPages/login.html
+++ b/app/tpl/userPages/login.html
@@ -1,5 +1,4 @@
-
-    <!--breadcrumbs start-->
+ <!--breadcrumbs start-->
     <div class="breadcrumbs">
         <div class="container">
             <div class="row">
@@ -32,8 +31,7 @@
                 <label class="checkbox">
                     <input type="checkbox" value="remember-me"> Remember me
                     <span class="pull-right">
-                        <a data-toggle="modal" href="#myModal"> Forgot Password?</a>
-
+                        <a data-toggle="modal" href="#/forgetPass"> 忘记密码?</a>
                     </span>
                 </label>
                 <button class="btn btn-lg btn-login btn-block" type="button" id="loginSubmit">登录</button>
