--- a/app/tpl/userPages/register.html
+++ b/app/tpl/userPages/register.html
@@ -1,17 +1,4 @@
-<!-- 	<div class="wrapper">
-			<hr>
-		<div class="container-log">
-			<form class="form">
-				<input type="text" class="username" placeholder="用户名">
-				<input type="password" class="pass" placeholder="密码">
-				<input type="password" class="conpass" placeholder="确认密码">
-				<button type="button" id="login-button">注册</button>
-			</form>
-		</div>
-	</div>
- -->
-
- <!--breadcrumbs start-->
+<!--breadcrumbs start-->
     <div class="breadcrumbs">
         <div class="container">
             <div class="row">
@@ -38,9 +25,10 @@
                 <div class="login-wrap">
                     <input type="text" class="form-control" id="username" placeholder="手机号" autofocus="" name="username">
 
-                    <input type="text" class="form-control" id="verification_code" name="verification_code" placeholder="短信验证码" style="width: 150px;float: left">
-                    <button class="btn btn-warning" id="send" type="button" style="margin-top:3px;float:right;">获取短信验证码</button>
-					
+                    <input type="text" class="form-control" id="verification_code" name="verification_code" placeholder="短信验证码" style="width: 160px;float: left;">
+
+                    <input type="button" id="send" class="btn btn-warning" value="免费获取验证码" style="float: right;height: 36px; "  /> 
+				
                     <input type="password" class="form-control" id="pass" name="password" placeholder="密码">
                     <input type="password" class="form-control" id="conpass" placeholder="确认密码">
 
@@ -49,13 +37,18 @@
                     </label> -->
                     <button class="btn btn-lg btn-login btn-block" type="button" id="submit">注册</button>
 
+
                     <div class="registration">
                         Already Registered ?
                         <a class="" href="#/login">
                             Login
                         </a>
                     </div>
+
+
                 </div>
             </form>
         </div>
      </div>
+
+
