--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
 
 
 
-    <script type="text/javascript" src="app/demoStyle/assets/bxslider/jquery.bxslider.js"></script>
+<!--     <script type="text/javascript" src="app/demoStyle/assets/bxslider/jquery.bxslider.js"></script>
 
     <script type="text/javascript" src="app/demoStyle/js/jquery.parallax-1.1.3.js"></script>
     <script src="app/demoStyle/js/wow.min.js"></script>
     <script src="app/demoStyle/assets/owlcarousel/owl.carousel.js"></script>
 
-    <script src="app/demoStyle/js/jquery.easing.min.js"></script>
+    <script src="app/demoStyle/js/jquery.easing.min.js"></script> -->
 
     <!--common script for all pages-->
-    <script src="app/demoStyle/js/common-scripts.js">
-    </script>
+<!--     <script src="app/demoStyle/js/common-scripts.js">
+    </script> -->
 
     <!-- Sequence Moder -slider js -->
-    <script src="app/demoStyle/js/seq-slider/jquery.sequence-min.js">
+<!--     <script src="app/demoStyle/js/seq-slider/jquery.sequence-min.js">
     </script>
 
 
 
     <script src="app/demoStyle/js/seq-slider/sequencejs-options.sliding-horizontal-parallax.js">
-    </script>
+    </script> -->
 
 
 
