--- a/app/tpl/safetyInfo.html
+++ b/app/tpl/safetyInfo.html
@@ -18,20 +18,24 @@
     <!--breadcrumbs end-->
 
 <div class="bs-example">
-<!--  		<ul>
-			<li class="text-info">ID：{{data.id}}</li>
-			<li class="text-primary">安全问题：{{data.question}}</li>
-			<li class="text-info">安全答案：{{data.answer}}</li> -->
-<!-- 			<li class="text-primary">安全邮箱：{{data.safety_email}}</li>
-			<li > {{data.finalEmail}}</li> -->
-<!-- 			<li class="text-info">安全级别:{{data.safety_level}}</li>
-		</ul> 
- -->
 
-	<form role="form" action="" method="get">
+
+<!-- 安全系数不为0时 -->
+	<form role="form" action="" method="get" id="safe" >
+		<div style=" width: 250px" >
+	<div style="display: inline-block;font-weight: bold;">安全系数:</div>	
+		<div class="progress" style="width: 70%;display: inline-block;float: right;">
+		    <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:{{data.length}}">
+		  	{{data.safeFactor}}
+		  </div>
+	</div>
+</div>
+
+<br>
 
 		  <div class="form-group">
 	        <div style="font-weight: bold;">安全问题：{{data.question}}</div>
+	        <br>
 
 	         <div style="font-weight: bold;">安全答案：{{data.coverAnswer}}</div>
 	         <br>
@@ -72,7 +76,7 @@
 			<!-- 模态框结束 -->
 			</div> 
 			
-
+ <br>
 			<div class="pay" style="font-weight: bold;">支付密码：{{data.coverPayment}}&emsp;	
 				<button data-toggle="modal" data-target="#forgetPay" type="button" class="btn btn-sm btn-primary">
 			  		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>支付密码
@@ -110,6 +114,45 @@
 			</div>
 	      </div> 
 	</form>
+	<!-- 安全系数不为0时结束-->
+
+	<!-- 未有安全系数时 -->
+
+	    <form role="form" id="unsafe">
+	      <div class="form-group">
+	        <label for="setQuestion">安全问题</label>
+	        <input type="text" class="form-control" id="setQuestion" placeholder="请输入你的安全问题" name="question">
+	      </div>
+
+	      <div class="form-group">
+	        <label for="setAnswer">安全答案</label>
+	        <input type="text" class="form-control" id="setAnswer" placeholder="请输入你的安全问题" name="answer">
+	      </div>
+
+	      <div class="form-group">
+	        <label for="setSafetyEmail">安全邮箱</label>
+	        <input type="email" class="form-control" id="setSafetyEmail" placeholder="请输入你的安全邮箱" name="safetyEmail" >
+	      </div>
+
+	      <div class="form-group">
+	        <label for="setPaymentPassword">支付密码</label>
+	        <input type="password" class="form-control" id="setPaymentPassword" placeholder="请输入你的支付密码" name="paymentPassword" >
+	      </div>
+
+	      <div class="form-group">
+	        <label for="setConpaymentPassword">重新支付密码</label>
+	        <input type="password" class="form-control" id="setConpaymentPassword" placeholder="请再次输入你的支付密码" name="conpaymentPassword" >
+	      </div>
+
+
+	      <button type="button" class="btn btn-primary" id="perfectSafetyInfo">提交</button>
+    </form>
+
+
+
+	<!-- 未有安全系数时结束 -->
+
+
 </div>
 
 
