Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/entry.html
+++ b/app/tpl/entry.html
@@ -13,56 +13,7 @@
 		4，点击entry执行路由中的entry方法构造entry的view，相当于执行app/view/entry.js中的方法
 	</p>
 </div>
-
-<!-- <input type="button" style="height:32px;width:120px;" value="点击发送验证码" onclick="sendCode(this)" />
-<script type="text/javascript">
- var clock = '';
- var nums = 10;
- var btn;
- function sendCode(thisBtn)
- { 
- btn = thisBtn;
- btn.disabled = true; //将按钮置为不可点击
- btn.value = nums+'秒后可重新获取';
- clock = setInterval(doLoop, 1000); //一秒执行一次
- }
- function doLoop()
- {
- nums--;
- if(nums > 0){
-  btn.value = nums+'秒后可重新获取';
- }else{
-  clearInterval(clock); //清除js定时器
-  btn.disabled = false;
-  btn.value = '点击发送验证码';
-  nums = 10; //重置时间
- }
- }
-</script> -->
-
-<!-- <input type="button" id="btn" value="免费获取验证码" />  
-<script type="text/javascript">  
-var wait=60;  
-function time(o) {  
-        if (wait == 0) {  
-            o.removeAttribute("disabled");            
-            o.value="免费获取验证码";  
-            wait = 60;  
-        } else {  
-            o.setAttribute("disabled", true);  
-            o.value="重新发送(" + wait + ")";  
-            wait--;  
-            setTimeout(function() {  
-                time(o)  
-            },  
-            1000)  
-        }  
-    }  
-document.getElementById("btn").onclick=function(){time(this);}  
-
-</script> 
- -->
-
+<!-- 
 <script type="text/javascript"> 
 var countdown=6; 
 function sendemail(){
@@ -88,48 +39,8 @@ setTimeout(function() {
 }
 </script>
 
-<input type="button" id="btn" value="免费获取验证码" onclick="sendemail()" /> 
+<input type="button" id="btn" value="免费获取验证码" onclick="sendemail()" />  -->
+
+
   
 
-
-<!-- 
- <script type="text/javascript">
-     //发送验证码时添加cookie
-function addCookie(name,value,expiresHours){ 
-  var cookieString=name+"="+escape(value); 
-  //判断是否设置过期时间,0代表关闭浏览器时失效
-  if(expiresHours>0){ 
-    var date=new Date(); 
-    date.setTime(date.getTime()+expiresHours*1000); 
-    cookieString=cookieString+";expires=" + date.toUTCString(); 
-  } 
-    document.cookie=cookieString; 
-} 
-//修改cookie的值
-function editCookie(name,value,expiresHours){ 
-  var cookieString=name+"="+escape(value); 
-  if(expiresHours>0){ 
-   var date=new Date(); 
-   date.setTime(date.getTime()+expiresHours*1000); //单位是毫秒
-   cookieString=cookieString+";expires=" + date.toGMTString(); 
-  } 
-   document.cookie=cookieString; 
-} 
-//根据名字获取cookie的值
-function getCookieValue(name){ 
-   var strCookie=document.cookie; 
-   var arrCookie=strCookie.split("; "); 
-   for(var i=0;i<arrCookie.length;i++){ 
-    var arr=arrCookie[i].split("="); 
-    if(arr[0]==name){
-     return unescape(arr[1]);
-     break;
-    }else{
-       return ""; 
-       break;
-     } 
-   } 
-     
-}
- </script>
- <input id="second" type="button" value="免费获取验证码" /> -->
