--- a/app/tpl/safetyInfo.html
+++ b/app/tpl/safetyInfo.html
@@ -51,7 +51,7 @@
 				        <div class="modal-content">
 				            <div class="modal-header">
 				                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				                <h4 class="modal-title" id="myModalLabel">
+				                <h4 class="modal-title">
 				                	<span  class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
 				                	安全邮箱
 				                </h4>
@@ -89,7 +89,7 @@
 				        <div class="modal-content">
 				            <div class="modal-header">
 				                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				                <h4 class="modal-title" id="myModalLabel">
+				                <h4 class="modal-title">
 				                	<span  class="glyphicon glyphicon-cog" aria-hidden="true"></span>
 				                	支付密码
 				                </h4>
