--- a/app/tpl/userPages/login.html
+++ b/app/tpl/userPages/login.html
@@ -31,21 +31,12 @@
                 <label class="checkbox">
                     <input type="checkbox" value="remember-me"> Remember me
                     <span class="pull-right">
-                        <a data-toggle="modal" href="#/forgetPass"> 忘记密码?</a>
+                        <a data-toggle="modal" data-target="#forgetPass" style="cursor:pointer"> 忘记密码?</a>
                     </span>
+
                 </label>
                 <button class="btn btn-lg btn-login btn-block" type="button" id="loginSubmit">登录</button>
-<!--                 <p>or you can sign in via social network</p>
-                <div class="login-social-link">
-                    <a href="index.html" class="facebook">
-                        <i class="fa fa-facebook"></i>
-                        Facebook
-                    </a>
-                    <a href="index.html" class="twitter">
-                        <i class="fa fa-twitter"></i>
-                        Twitter
-                    </a>
-                </div> -->
+
                 <div class="registration">
                     Don't have an account yet?
                     <a class="" href="#/register">
@@ -58,3 +49,23 @@
         </div>
     </div>
     <!--container end-->
+
+
+    <!-- 模态框（Modal） -->
+<div class="modal fade" id="forgetPass" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">
+                <span  class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                忘记密码</h4>
+            </div>
+            <div class="modal-body">在这里添加一些文本</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary">提交更改</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
