--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <meta name="description" content="Developed By M Abdur Rokib Promy">
     <meta name="author" content="cosmic">
     <meta name="keywords" content="Bootstrap 3, Template, Theme, Responsive, Corporate, Business">
+
+
+
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"><!--ie使用edge渲染模式-->
+    <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" id="viewport" name="viewport">
+    <meta name="renderer" content="webkit"><!--360渲染模式-->
+    <meta name="format-detection" content="telephone=notelphone=no, email=no" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <meta name="apple-touch-fullscreen" content="yes"><!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"><!-- 设置苹果工具栏颜色:默认值为 default，可以定为 black和 black-translucent-->
+    <meta http-equiv="Cache-Control" content="no-siteapp" /><!-- 不让百度转码 -->
+    <meta name="HandheldFriendly" content="true"><!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
+    <meta name="MobileOptimized" content="320"><!-- 微软的老式浏览器 -->
+    <meta name="screen-orientation" content="portrait"><!-- uc强制竖屏 -->
+    <meta name="x5-orientation" content="portrait"><!-- QQ强制竖屏 -->
+    <meta name="browsermode" content="application"><!-- UC应用模式 -->
+    <meta name="x5-page-mode" content="app"><!-- QQ应用模式 -->
+    <meta name="msapplication-tap-highlight" content="no"><!-- windows phone 点击无高光 -->
+
+
     <title>TestLoan</title>
 </head>
 
@@ -24,6 +47,11 @@
     <script src="app/demoStyle/js/link-hover.js"></script>
     <script defer src="app/demoStyle/js/jquery.flexslider.js"></script>
     <script src="app/demoStyle/js/superfish.js"></script>
+
+    <!--<script src="app/lib/jquery.cookie.js"></script>-->
+
+    <script src="app/slider/wySilder.min.js" type="text/javascript"></script>
+
 
 
 
