--- a/app/tpl/entry.html
+++ b/app/tpl/entry.html
@@ -42,5 +42,23 @@ setTimeout(function() {
 <input type="button" id="btn" value="免费获取验证码" onclick="sendemail()" />  -->
 
 
+  <!--<link rel="stylesheet" href="/app/demoStyle/alertStyle/example/example.css">-->
+
+  <!--&lt;!&ndash; This is what you need &ndash;&gt;-->
+  <!--<script src="/app/demoStyle/alertStyle/lib/sweet-alert.js"></script>-->
+  <!--<link rel="stylesheet" href="/app/demoStyle/alertStyle/lib/sweet-alert.css">-->
+
+
+
+    <!--<h4>Sweet Alert</h4>-->
+    <!--<button class="btn btn-primary">Show error message</button>-->
+
+
+<!--<script>-->
+    <!--document.querySelector('button').onclick = function(){-->
+    <!--swal("Oops...", "Something went wrong!", "error");-->
+<!--};-->
+<!--</script>-->
+
   
 
