--- a/index.html
+++ b/index.html
@@ -8,26 +8,8 @@
     <meta name="keywords" content="Bootstrap 3, Template, Theme, Responsive, Corporate, Business">
 
 
-
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"><!--ie使用edge渲染模式-->
-    <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" id="viewport" name="viewport">
-    <meta name="renderer" content="webkit"><!--360渲染模式-->
-    <meta name="format-detection" content="telephone=notelphone=no, email=no" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <meta name="apple-touch-fullscreen" content="yes"><!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"><!-- 设置苹果工具栏颜色:默认值为 default，可以定为 black和 black-translucent-->
-    <meta http-equiv="Cache-Control" content="no-siteapp" /><!-- 不让百度转码 -->
-    <meta name="HandheldFriendly" content="true"><!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
-    <meta name="MobileOptimized" content="320"><!-- 微软的老式浏览器 -->
-    <meta name="screen-orientation" content="portrait"><!-- uc强制竖屏 -->
-    <meta name="x5-orientation" content="portrait"><!-- QQ强制竖屏 -->
-    <meta name="browsermode" content="application"><!-- UC应用模式 -->
-    <meta name="x5-page-mode" content="app"><!-- QQ应用模式 -->
-    <meta name="msapplication-tap-highlight" content="no"><!-- windows phone 点击无高光 -->
-
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
     <title>TestLoan</title>
 </head>
@@ -38,8 +20,8 @@
 	<!-- Application container. -->
 	<div role="main" id="main"></div>
 	<script data-main="app/main" src="app/lib/require.js"></script>
-    <script src="app/demoStyle/js/jquery.js"></script>
-    <script src="app/demoStyle/js/jquery-1.8.3.min.js"></script>
+    <script src="app/lib/jquery.min.js"></script>
+
     <script src="app/demoStyle/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="app/demoStyle/js/hover-dropdown.js"></script>
 
@@ -48,93 +30,14 @@
     <script defer src="app/demoStyle/js/jquery.flexslider.js"></script>
     <script src="app/demoStyle/js/superfish.js"></script>
 
+    <!--alert样式-->
+    <!--<link rel="stylesheet" href="app/demoStyle/alertStyle/example/example.css">-->
+    <!--<script src="app/demoStyle/alertStyle/lib/sweet-alert.js"></script>-->
+    <!--<link rel="stylesheet" href="app/demoStyle/alertStyle/lib/sweet-alert.css">-->
+
+
     <!--<script src="app/lib/jquery.cookie.js"></script>-->
 
-    <script src="app/slider/wySilder.min.js" type="text/javascript"></script>
 
-
-
-
-
-
-
-<!--     <script type="text/javascript" src="app/demoStyle/assets/bxslider/jquery.bxslider.js"></script>
-
-    <script type="text/javascript" src="app/demoStyle/js/jquery.parallax-1.1.3.js"></script>
-    <script src="app/demoStyle/js/wow.min.js"></script>
-    <script src="app/demoStyle/assets/owlcarousel/owl.carousel.js"></script>
-
-    <script src="app/demoStyle/js/jquery.easing.min.js"></script> -->
-
-    <!--common script for all pages-->
-<!--     <script src="app/demoStyle/js/common-scripts.js">
-    </script> -->
-
-    <!-- Sequence Moder -slider js -->
-<!--     <script src="app/demoStyle/js/seq-slider/jquery.sequence-min.js">
-    </script>
-
-
-
-    <script src="app/demoStyle/js/seq-slider/sequencejs-options.sliding-horizontal-parallax.js">
-    </script> -->
-
-
-
-    <!-- end of sequence slider js-->
-
-  <!--   <script type="text/javascript">
-      jQuery(document).ready(function() {
-
-
-        $('.bxslider1').bxSlider({
-          minSlides: 5,
-          maxSlides: 6,
-          slideWidth: 360,
-          slideMargin: 2,
-          moveSlides: 1,
-          responsive: true,
-          nextSelector: '#slider-next',
-          prevSelector: '#slider-prev',
-          nextText: 'Onward →',
-          prevText: '← Go back'
-        });
-
-      });
-
-
-    </script>
-    <script>
-      $('a.info').tooltip();
-      $(window).load(function() {
-        $('.flexslider').flexslider({
-          animation: "slide",
-          start: function(slider) {
-            $('body').removeClass('loading');
-          }
-        });
-      });
-
-
-
-      $(document).ready(function() {
-
-        $("#owl-demo").owlCarousel({
-
-          items : 4
-
-        });
-
-      });
-
-      jQuery(document).ready(function(){
-        jQuery('ul.superfish').superfish();
-      });
-
-      new WOW().init();
-
-
-    </script>
- -->
 </body>
 </html>
