Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/entry.html
+++ b/app/tpl/entry.html
@@ -13,8 +13,8 @@
 		4，点击entry执行路由中的entry方法构造entry的view，相当于执行app/view/entry.js中的方法
 	</p>
 </div>
-<!-- 
-<script type="text/javascript"> 
+
+<!-- <script type="text/javascript"> 
 var countdown=6; 
 function sendemail(){
     var obj = $("#btn");
@@ -42,23 +42,23 @@ setTimeout(function() {
 <input type="button" id="btn" value="免费获取验证码" onclick="sendemail()" />  -->
 
 
-  <!--<link rel="stylesheet" href="/app/demoStyle/alertStyle/example/example.css">-->
+
 
   <!--&lt;!&ndash; This is what you need &ndash;&gt;-->
-  <!--<script src="/app/demoStyle/alertStyle/lib/sweet-alert.js"></script>-->
-  <!--<link rel="stylesheet" href="/app/demoStyle/alertStyle/lib/sweet-alert.css">-->
+  <script src="/app/demoStyle/alertStyle/lib/sweet-alert.js"></script>
+  <link rel="stylesheet" href="/app/demoStyle/alertStyle/lib/sweet-alert.css">
 
 
 
-    <!--<h4>Sweet Alert</h4>-->
-    <!--<button class="btn btn-primary">Show error message</button>-->
+    <h4>Sweet Alert</h4>
+    <button class="btn btn-primary">Show error message</button>
 
 
-<!--<script>-->
-    <!--document.querySelector('button').onclick = function(){-->
-    <!--swal("Oops...", "Something went wrong!", "error");-->
-<!--};-->
-<!--</script>-->
+<script>
+    document.querySelector('button').onclick = function(){
+    swal("Oops...", "Something went wrong!", "error");
+};
+</script>
 
   
 
