--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <script src="app/demoStyle/js/superfish.js"></script>
 
     <!--alert样式-->
-    <!--<link rel="stylesheet" href="app/demoStyle/alertStyle/example/example.css">-->
-    <!--<script src="app/demoStyle/alertStyle/lib/sweet-alert.js"></script>-->
-    <!--<link rel="stylesheet" href="app/demoStyle/alertStyle/lib/sweet-alert.css">-->
+<!-- 
+    <script src="app/demoStyle/alertStyle/lib/sweet-alert.js"></script>
+    <link rel="stylesheet" href="app/demoStyle/alertStyle/lib/sweet-alert.css"> -->
 
 
     <!--<script src="app/lib/jquery.cookie.js"></script>-->
