--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
 <body>
 	<!-- Application container. -->
 	<div role="main" id="main"></div>
+  
+  <script src="app/lib/jquery.min.js"></script>
+
+  <script src="app/demoStyle/js/bootstrap.min.js"></script>
+  <script src="app/lib/bootbox.min.js"></script>
+  <script type="text/javascript" src="app/demoStyle/js/hover-dropdown.js"></script>
+
+
+  <script src="app/demoStyle/js/link-hover.js"></script>
+  <script defer src="app/demoStyle/js/jquery.flexslider.js"></script>
+  <script src="app/demoStyle/js/superfish.js"></script>
 	<script data-main="app/main" src="app/lib/require.js"></script>
-    <script src="app/lib/jquery.min.js"></script>
-
-    <script src="app/demoStyle/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="app/demoStyle/js/hover-dropdown.js"></script>
-
-
-    <script src="app/demoStyle/js/link-hover.js"></script>
-    <script defer src="app/demoStyle/js/jquery.flexslider.js"></script>
-    <script src="app/demoStyle/js/superfish.js"></script>
+    
 
     <!--alert样式-->
 <!-- 
