Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/entry.html
+++ b/app/tpl/entry.html
@@ -45,7 +45,8 @@ setTimeout(function() {
 
 
   <!--&lt;!&ndash; This is what you need &ndash;&gt;-->
-  <script src="/app/demoStyle/alertStyle/lib/sweet-alert.js"></script>
+  
+<!--   <script src="/app/demoStyle/alertStyle/lib/sweet-alert.js"></script>
   <link rel="stylesheet" href="/app/demoStyle/alertStyle/lib/sweet-alert.css">
 
 
@@ -58,7 +59,7 @@ setTimeout(function() {
     document.querySelector('button').onclick = function(){
     swal("Oops...", "Something went wrong!", "error");
 };
-</script>
+</script> -->
 
   
 
