--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -27,6 +27,7 @@
                     <li><a href="#/requireCss">requireCss</a></li>
                     <li><a href="#/event">event</a></li>
                     <li><a href="#/params/1/2">params</a></li>
+                    <li><a href="#/loading">loading</a></li>
                     <li class="dropdown-submenu">
                         <a href="#" tabindex="-1">More options</a>
                         <ul class="dropdown-menu">
