--- a/app/tpl/safetyInfo.html
+++ b/app/tpl/safetyInfo.html
@@ -17,13 +17,13 @@
     </div>
     <!--breadcrumbs end-->
 
-<div class="bs-example">
+<div class="bs-example" style="margin-top: 20px">
 
 
 <!-- 安全系数不为0时 -->
 	<form role="form" action="" method="get" id="safe" >
-		<div style=" width: 250px" >
-	<div style="display: inline-block;font-weight: bold;">安全系数:</div>	
+		<div style=" width: 300px" >
+	<div style="display: inline-block;font-weight: bold;margin-left: 20px">安全系数:</div>	
 		<div class="progress" style="width: 70%;display: inline-block;float: right;">
 		    <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:{{data.length}}">
 		  	{{data.safeFactor}}
@@ -34,15 +34,15 @@
 <br>
 
 		  <div class="form-group">
-	        <div style="font-weight: bold;">安全问题：{{data.question}}</div>
+	        <div style="font-weight: bold; margin-left: 20px">安全问题：{{data.question}}</div>
 	        <br>
 
-	         <div style="font-weight: bold;">安全答案：{{data.coverAnswer}}</div>
+	         <div style="font-weight: bold;margin-left: 20px">安全答案：{{data.coverAnswer}}</div>
 	         <br>
 
-			<div class="email" style="font-weight: bold;">安全邮箱：{{data.finalEmail}}&emsp;						
+			<div class="email" style="font-weight: bold; margin-left: 20px">安全邮箱：{{data.finalEmail}}&emsp;						
 				<button data-toggle="modal" data-target="#forEmail" type="button" class="btn btn-sm btn-primary">
-			  		<span  class="glyphicon glyphicon-pencil" aria-hidden="true"></span>安全邮箱
+			  		<span  class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
 				</button>
 				<br>
 				<!-- 模态框 -->
@@ -59,10 +59,10 @@
 				            </div>
 				            <div class="modal-body">
 				            	<div style="font-weight: bold;">安全问题：<br>{{data.question}}</div>
-					            <label for="answer">验证安全问题：</label>
+					            <label>验证安全问题：</label>
 		       					 <input class="form-control checkAnswer" name="answer">
 
-					            <label for="safetyEmail">输入新的安全邮箱地址：</label>
+					            <label>输入新的安全邮箱地址：</label>
 		       					 <input class="form-control" id="writeEmail" name="safetyEmail">
 
 				            </div>
@@ -77,9 +77,9 @@
 			</div> 
 			
  <br>
-			<div class="pay" style="font-weight: bold;">支付密码：{{data.coverPayment}}&emsp;	
+			<div class="pay" style="font-weight: bold; margin-left: 20px">支付密码：{{data.coverPayment}}&emsp;	
 				<button data-toggle="modal" data-target="#forgetPay" type="button" class="btn btn-sm btn-primary">
-			  		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>支付密码
+			  		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
 				</button>
 			
 			<br>
@@ -96,10 +96,10 @@
 				            </div>
 				            <div class="modal-body">
 				            	<div style="font-weight: bold;">安全问题：<br>{{data.question}}</div>
-					            <label for="answer">验证安全问题：</label>
+					            <label>验证安全问题：</label>
 		       					 <input class="form-control checkAnswer" name="answer">
 
-					            <label for="paymentPassword">输入新的支付密码：</label>
+					            <label>输入新的支付密码：</label>
 		       					 <input class="form-control" id="writePayment" name="paymentPassword">
 
 				            </div>
