--- a/app/tpl/userPages/login.html
+++ b/app/tpl/userPages/login.html
@@ -28,8 +28,8 @@
                 <input type="password" class="form-control" placeholder="密码" id="password" name="password">
                 <input type="text" class="form-control" placeholder="验证码" id="code" name="verification_code">
 
-                <label class="checkbox">
-                    <input type="checkbox" value="remember-me"> Remember me
+                <label class="checkbox" style="margin-left: 22px">
+                    <input type="checkbox" value="remember-me" > Remember me
                     <span class="pull-right">
                         <a data-toggle="modal" data-target="#forgetPass" style="cursor:pointer"> 忘记密码?</a>
                     </span>
