Signed-off-by: TammyCT <471636895@qq.com>

--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -62,10 +62,10 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="about.html">个人贷款</a>
+                        <a href="#/personalLaon">个人贷款</a>
                     </li>
                     <li>
-                        <a href="404.html">企业贷款</a>
+                        <a href="#/comLoan">企业贷款</a>
                     </li>
 <!--                     <li>
                         <a href="#/regulation">贷款须知</a>
@@ -90,10 +90,10 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="portfolio-3-col.html">用户借钱</a>
+                        <a href="#/borrow">用户借钱</a>
                     </li>
                     <li>
-                        <a href="portfolio-4-col.html">借钱流程</a>
+                        <a href="#/borrProcess">借钱流程</a>
                     </li>
                 </ul>
             </li>
