--- a/app/tpl/safetyInfo.html
+++ b/app/tpl/safetyInfo.html
@@ -118,7 +118,7 @@
 
 	<!-- 未有安全系数时 -->
 
-	    <form role="form" id="unsafe">
+	    <form role="form" id="unsafe" style="margin: 20px">
 	      <div class="form-group">
 	        <label for="setQuestion">安全问题</label>
 	        <input type="text" class="form-control" id="setQuestion" placeholder="请输入你的安全问题" name="question">
