--- a/app/tpl/main.html
+++ b/app/tpl/main.html
@@ -164,16 +164,16 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="/app/demoStyle/img/parallax-slider/images/main-bg.jpg" alt="First slide">
-            <div class="carousel-caption">标题 1</div>
+            <img src="/app/demoStyle/img/banner/banner3.jpg" alt="First slide">
+<!--             <div class="carousel-caption">标题 1</div> -->
         </div>
         <div class="item">
-            <img src="/app/demoStyle/img/parallax-slider/images/main-bg.jpg" alt="Second slide">
-            <div class="carousel-caption">标题 2</div>
+            <img src="/app/demoStyle/img/banner/banner4.jpg" alt="Second slide">
+<!--             <div class="carousel-caption">标题 2</div> -->
         </div>
         <div class="item">
-            <img src="/app/demoStyle/img/parallax-slider/images/main-bg.jpg" alt="Third slide">
-            <div class="carousel-caption">标题 3</div>
+            <img src="/app/demoStyle/img/banner/banner2.jpg" alt="Third slide">
+<!--             <div class="carousel-caption">标题 3</div> -->
         </div>
     </div>
     <!-- 轮播（Carousel）导航 -->
